--- a/index.tex
+++ b/index.tex
@@ -364,7 +364,7 @@ automate the extraction process with LLMs, and introduce a new paper
 similarity measure based on decision similarity. This similarity measure
 can serves as a distance metric in dimension reduction methods to
 visualize papers according to their decisions. We apply this workflow to
-a set of 56 air pollution modelling studies that estimate the effect of
+a set of 56 air pollution modeling studies that estimate the effect of
 particulate matter (PM2.5 or PM10) on mortality and hospital admissions.
 This type of studies is typically analyzed using Poisson generalized
 linear models (GLMs) or generalized additive models (GAMs). Analysis of
@@ -406,7 +406,7 @@ In summary, the contribution of this work includes:
   format, and
 \item
   A dataset of decisions, along with metadata, compiled from 56 studies
-  in air pollution mortality modelling literature.
+  in air pollution mortality modeling literature.
 \end{itemize}
 
 \section{Related work}\label{sec-background}
@@ -517,7 +517,7 @@ keywords \citep{isenberg2017}, citation information \citep{chen2006},
 e.g.~citation list and co-citation, or combinations with other relevant
 paper metadata \citep{bethard2010, chou2011, dörk2012, heimerl2016},
 e.g.~author and title. Recent approaches incorporate text-based
-information using topic modelling \citep{alexander2014},
+information using topic modeling \citep{alexander2014},
 argumentation-based information retrieval \citep{tbahriti2006}, and text
 embedding \citep{narechania2022}. While metadata and high-level
 text-based information are useful for finding relevant papers,
@@ -533,13 +533,13 @@ recommend similar papers based on decision similarities.
 \section{Methods}\label{sec-extract-decisions}
 
 In this section, we present the workflow for extracting decisions from
-published literature using Large Language Models (LLMs). We first
-describe the data structure for recording decisions, followed by the
-four main steps: 1) automatic extraction from literature with LLMs, 2)
-validation and standardization of LLM outputs, 3) calculation of paper
-similarity, and 4) visualization paper similarity using clustering or
-dimension reduction methods. The section concludes with an illustration
-summarizing the workflow.
+published literature using LLMs. We first describe the data structure
+for recording decisions, followed by the four main steps in the
+workflow: 1) automatic extraction of decisions from literature with
+LLMs, 2) validation and standardization of LLM outputs, 3) calculation
+of paper similarity, and 4) visualization paper similarity using
+clustering or dimension reduction methods. The section concludes with an
+illustration summarizing the workflow.
 
 \subsection{Record decisions in data analysis}\label{sec-decisions}
 
@@ -547,20 +547,19 @@ In the study of the health effects of outdoor air pollution, one area of
 interest is the association between short-term, day-to-day changes in
 particulate matter air pollution and daily mortality counts. This
 question has been studied extensively by researchers across the globe
-and in the US, it serves to provide scientific evidence for to guide
-public policy on setting the National Ambient Air Quality Standards
-(NAAQS) for air pollutants. While individual modelling choices vary,
-these studies often share a common structure: they adjust for
-meteorological covariates such as temperature and humidity, apply
-temporal or spatial treatments, like including lagged variables and may
-estimate the effect by city or region before combining results. This
-naturally forms a ``many-analyst'' experiment setting where different
-researchers analyze similar data to address the same scientific question
-and the analyses are documented in published papers.
+and it serves to provide scientific evidence in the US to guide public
+policy on setting the National Ambient Air Quality Standards (NAAQS) for
+air pollutants. While individual modeling choices vary, these studies
+often share a common structure: they adjust for meteorological
+covariates, such as temperature and humidity, include lagged variables
+to account for temporal correlations, and estimate the effect size by
+city or region before pooling the results with random effect. This
+naturally forms a ``many-analyst'' experiment setting to analyze
+decisions in air pollution mortality modelling.
 
-Consider the following excerpt from \citet{ostro2006} that describes the
-modelling approach to provide evidence of an association between daily
-counts of mortality and ambient particulate matter (PM10):
+Consider the following excerpt from \citet{ostro2006} modeling the
+association between daily counts of mortality and ambient particulate
+matter (PM10):
 
 \begin{quote}
 Based on previous findings reported in the literature (e.g., Samet et
@@ -589,25 +588,23 @@ This sentence encode the following components of a decision:
   \textbf{decision}: 7 degrees of freedom (df) per year of data
 \end{itemize}
 
-To record these decisions in a tabular format, we follow the tidy data
-principle \citep{wickham2014}, which states each variable should be in a
-column and each observation in a row. For our purpose, each row
-represents a decision made by the authors in a paper and an analysis
-often include multiple decisions. To retain the original context of the
-decision, we extract the original text in the paper, without paraphrase
-or summarization. The decision choice above is a parameter choice of a
-statistical method applied to the variable. Analyses also include other
-types of decisions, such as temporal and spatial treatments, for
-example, the choice of lagged exposure for certain variables or whether
-the model is estimated collectively or separated for individual
-locations. These decisions don't have a specific method or parameter,
-but should still be recorded with the variable, type (spatial or
-temporal), reason, and decision fields.
+This decision can be recorded in a tabular format following the tidy
+data principle \citep{wickham2014}, which states that each variable
+forms a column and each observation forms in a row. For our purpose,
+each row represents a decision made in a paper and an analysis often
+include multiple decisions. We extract the original text in the paper,
+without paraphrase or summarization. The decision above is a parameter
+choice of a statistical method applied to the variable \emph{time}. A
+data analysis may also include other types of decisions, such as
+temporal or spatial ones, for example, the choice of lagged exposure for
+certain variables or whether the model is estimated collectively or
+separated for individual locations. These decisions don't have a
+specific method or parameter fields, but should still include variable,
+type (spatial or temporal), reason, and decision fields.
 
-Given the writing style and the quality of the analysis itself, multiple
-decisions may be combined in one sentence and certain fields,
-e.g.~decision and reason, may be omitted. Consider the following excerpt
-from \citet{ostro2006}:
+Given the writing style of authors, multiple decisions may be combined
+in one sentence and certain fields may be omitted. Consider a different
+excerpt from \citet{ostro2006}:
 
 \begin{quote}
 Other covariates, such as day of the week and smoothing splines of 1-day
@@ -618,7 +615,7 @@ levels.
 \end{quote}
 
 This sentence contains four decisions: two for temperature (the temporal
-lag and the smoothing spline parameter) and two for humidity and should
+lag and the smoothing spline parameter) and two for humidity, and should
 be structured as separate entries:
 
 \begin{longtable}[]{@{}
@@ -660,14 +657,13 @@ ostro & 3 & temperature & NA & NA & temporal & 1-day lags & NA \\
 ostro & 4 & relative humidity & NA & NA & temporal & 1-day lags & NA \\
 \end{longtable}
 
-Notice in the example above, the reason field are recorded as NA. This
-is because the stated rationale (``and are likely to vary over time in
-concert with air pollution levels'') only supports the general inclusion
-of temporal lags but does not justify the specific choice of 1-day lag
-over other alternatives, for example, 2-day average of lags 0 and 1 and
-single-day lag of 2 days. Similar scenario can happen when a direct
-decision is missing while a reason is provided (``done by minimizing
-Akaike's information criterion''), as in \citet{katsouyanni2001}:
+Notice in the example above, the reason field is recorded as NA. This is
+because the stated reason (``and are likely to vary over time in concert
+with air pollution levels'') only supports the general inclusion of
+temporal lags but does not justify the specific choice of 1-day lag over
+other alternatives, e.g.~2-day average of lags 0 and 1 or single-day lag
+of 2 days. Similar scenario can happen when a direct decision choice is
+missing but a reason is provided, as in \citet{katsouyanni2001}:
 
 \begin{quote}
 The inclusion of lagged weather variables and the choice of smoothing
@@ -679,51 +675,50 @@ Akaike's information criterion.
 LLMs}\label{extract-decisions-automatically-from-literature-with-llms}
 
 Manually extracting decisions from published papers is labor-intensive
-and time-consuming. With Large Language Models (LLMs), it has become
-possible to automatically extract structured information from
-unstructured text by supplying a set of PDF documents and a prompt for
-instruction. Text recognition from PDF document relies on Optical
-Character Recognition (OCR) to convert scanned images into
-machine-readable text -- capability currently offered by Antropic Claude
-and Google Gemini. In the prompt, we assign the LLM a role as an applied
-statistician and instruct it to generate a markdown file containing a
-JSON block that extract decisions from the PDF in the format described
-in Section~\ref{sec-decisions}. We also provide a set of instructions
-and examples on the potential missing of reason and decision fields.
-Prompt engineering techniques \citep{chen2025, xu} are used to optimize
-the prompt script. The full prompt feed to the LLM is provided in the
+and time-consuming. With LLMs, it is now possible to automatically
+extract this type of information by supplying a set of PDF documents and
+a prompt for instruction. Text recognition from PDF document relies on
+Optical Character Recognition (OCR) to convert scanned images into
+machine-readable text -- a capability currently offered by Antropic
+Claude and Google Gemini. In the prompt, we assign the LLM a role as an
+applied statistician and instruct it extract decisions from the PDF in
+the format, described in Section~\ref{sec-decisions} and write the
+output in a JSON block in a markdown file. We also provide a set of
+instructions and examples on the possibility of missing of reason and
+decision fields as discussed in Section~\ref{sec-decisions}. Prompt
+engineering techniques \citep{chen2025, xu} are used to optimize the
+prompt and the full prompt used in this work is provided in the
 Appendix. We use the \texttt{chat\_PROVIDER()} functions from the
-\texttt{ellmer} package \citep{ellmer} in R to obtain the output with
-Gemini and Claude API.
+\texttt{ellmer} package \citep{ellmer} in R to obtain the output.
 
 \subsection{Validate and standardize LLM
 outputs}\label{validate-and-standardize-llm-outputs}
 
 The LLM outputs need to be validated and standardized before further
-analysis. Validation focuses on ensuring the correctness of the
-extracted decisions by LLMs, while standardization aims to ensure
-consistency in variable and model names across papers, given authors may
-express the same concept in different ways. For example, ``mean
-temperature'', ``average temperature'', and ``temperature'' all refer to
-the same variable, which can be all standardized to ``temperature'' for
-consistency. To help with the validation and standardization process, we
-developed a Shiny application that provides an interactive interface for
-users to review and edit the LLM outputs. A Shiny application takes a
-CSV of extracted decisions as input and allows three types of edits: 1)
+analysis. Validation focuses on ensuring the extracted decisions are
+correct, while standardization ensure different expressions of the same
+variable are standardized into the same expression. For example, the
+expression \emph{mean temperature}, \emph{average temperature}, and
+\emph{temperature} all refer to the same variable and are standardized
+to \emph{temperature}. To help with the validation and standardization
+process, we developed a Shiny application, which provides an interactive
+interface for users to review and edit the LLM outputs. The Shiny
+application takes an input of a CSV file that contains the extracted
+decisions and allows users to perform three types of edits: 1)
 \emph{overwrite} -- modify the content of a particular cell, 2)
-\emph{delete} -- remove a particular irrelevant decision, and 3)
-\emph{add} -- manually enter a missing decision. Figure~\ref{fig-shiny}
-illustrates the \emph{overwrite} action for standardizing the variable
-NCtot (The number concentration of urban background particles
-\textless100 nm in diameter) to ``pollution'': the user enters a
-predicate function in the filter condition box on the left panel, and
-the filtered data will appear interactively in the right panel. The user
-can then specify the variable to overwrite and the new value and the
-corresponding cells in the right panel will be updated. This change need
-to be confirmed by pressing the ``Apply changes'' button to update the
-full dataset. The corresponding \texttt{tidyverse} \citep{tidyverse}
-code will then be generated in the left panel to be included in an R
-script, and the edited table can be downloaded for future analysis.
+\emph{delete} -- remove an irrelevant decision, and 3) \emph{add} --
+manually enter a missing decision. Figure~\ref{fig-shiny} illustrates
+the \emph{overwrite} action for standardizing the variable \emph{NCtot}
+(number concentration of particles \textless100 nm in diameter) to
+\emph{pollution}. The user enters a predicate function in the filter
+condition box on the left panel, and the filtered data will appear
+interactively on the right panel. The user can then specify the variable
+to overwrite and the new value. The corresponding cells on the right
+panel will be updated. This change need to be confirmed by pressing the
+``Apply changes'' button to update to the full dataset. The
+corresponding \texttt{tidyverse} \citep{tidyverse} code will then be
+generated on the left panel to be included in an R script, and the
+edited table can be downloaded for future analysis.
 
 \begin{figure}
 
@@ -734,74 +729,68 @@ script, and the edited table can be downloaded for future analysis.
 }
 
 \caption{\label{fig-shiny}The Shiny application interface to validate
-and standardize Large Language Model (LLM)-generated output. (1) the
+and standardize Large Language Model (LLM)-generated output. (1) The
 default interface after loading the input CSV file. (2) The table view
 will update interactively to reflect the edit: for paper with handle
-``andersen2008size'' and id in 4, 5, 6, replace the variable NCtot with
-``pollutant''. (3) After clicking the Confirm button, the corresponding
-\texttt{tidyverse} code is generated, and the table view returns to its
-original unfiltered view with the edits applied. The edited data can be
-downloaded by clicking the Download CSV button.}
+``andersen2008size'' and id in 4, 5, 6, modify the variable name
+\emph{NCtot} to \emph{pollutant}. (3) After clicking the Confirm button,
+the corresponding \texttt{tidyverse} code for the modification is
+generated, and the table view returns to its original unfiltered view
+with the edit applied. The edited data can be downloaded by clicking the
+Download CSV button.}
 
 \end{figure}%
 
 \subsection{Calculate paper similarity and
 visualization}\label{sec-paper-similarity}
 
-Once the output has been extracted and validated, the decisions can be
-treated as data for further analysis. In this section, we construct a
-distance metric between pairs of papers based on the similarity of their
-decision choices. This metric can then be used as a distance matrix
-among papers for clustering, dimension reduction, and visualization.
+Once the output has been extracted and validated, these decisions can be
+treated as data for further analysis. Apart from exploratory data
+analysis, we propose a paper similarity measure to compare how similar
+decisions are between paper pairs. A decision is considered comparable
+between a paper pair if the two papers share the same variable and
+decision type, e.g.~a parameter decision on temperature. Three factors
+are considered in calculating the similarity between two matched
+decisions: 1) whether the two decisions are similar, 2) whether the
+reasons for the decisions are similar, and 3) for parameter type
+decisions, whether the statistical methods used are the same. Method and
+choice similarity indicate the same decision being made in the analysis,
+whereas a similar reason reflects a shared principle for making the
+choice, even when the choices themselves may differ due to differences
+in the underlying data. For reasons and choices, we first obtain the
+text embedding for all the choices and reasons, and calculate the cosine
+similarity between the matched reason and decisions from the language
+model \texttt{BERT} using the \texttt{text} package \citep{text} in
+\texttt{R}. For methods, we encode them as a binary variable: 1 if the
+two papers used the same method, and 0 otherwise because semantic
+similarity cannot fully capture the difference between statistical
+methods, e.g., the difference between smoothing spline and natural
+spline is not well represented by the textual difference of
+``smoothing'' and ``natural''. The paper similarity is then computed as
+the average decision similarities across all the matched methods,
+decisions, and reasons.
 
-For each paper pair, a decision is considered comparable if the papers
-share the same variable and decision type, for example, a parameter
-decision on temperature or the temporal decision on humidity. For two
-decisions to be considered similar, both the decision choice and the
-rationale are taken into account. A similar choice indicates a similar
-final decisions are made in the analysis, whereas a similar reason
-reflects a shared rationale or justification for the choice, even when
-the choices themselves differ, potentially due to differences in the
-underlying data. To assign numerical value for measuring the similarity,
-we use the semantic similarity from text model, using the \texttt{text}
-package \citep{text}. We first obtain the text embedding for all the
-reason and decisions and calculate the cosine similarity between the
-matched reason and decisions. For parameter type decisions, the
-statistical method used also contributes to the similarity of the
-decision. Since semantic similarity cannot fully capture the difference
-betweenit statistical methods (the difference between smoothing spline
-and natural spline is not well represented by the textual difference of
-``smoothing'' and ``natural''), method similarity is encoded as binary:
-1 if the two papers used the same method, and 0 otherwise. The paper
-similarity is then computed as the average similarity across all the
-matched methods, decisions, and reasons. The resulting paper similarity
-metric can be interpreted as a distance measure to cluster and visualize
-papers based on their decision choices.
-
-Because analyses vary in the decisions they report, the number of
-matched decisions differs across paper pairs. In practice, some studies
-may not fully report the decision and reason for every choice made,
-leading to missing data for the matched decisions. Although paper
-similarity can be calculated based on all available matched decisions,
-cares should be taken for pairs with only a small number of matches, as
-the paper similarity may be overly influenced by one or two decisions.
-To address this, users may focus on a set of decisions shared across
-papers and on papers that report a minimal number of these decisions
-when calculating paper similarity.
+Although paper similarity can be calculated based on all available
+matched decisions, cares should be taken for pairs with only a small
+number of matches. This can happen because two papers focus on different
+variables or some decisions have missing choices or reasons (discussed
+in Section~\ref{sec-decisions}). In practice, users may decide to focus
+on a set of decisions shared among papers or on papers that report a
+minimal number of shared decisions when calculating paper similarity.
 
 \subsection{Summary}\label{summary}
 
-Figure~\ref{fig-workflow} summarises the entire workflow for extracting
-decisions from published literature using Large Language Models (LLMs)
-and analyzing the extracted decisions. Once researchers have identified
-a set of literature of interest and a prompt to instruct LLMs to extract
-decisions from the literature. The outputs from LLM need to be validated
-and standardized before further analysis due to authors' varied writing
-styles. The validated data can then be used to conduct exploratory
-analysis of decision choices and one task is to calculate paper
-similarity based on the decision similarity. This paper similarity
-measure can be seen as a distance metric among papers, which can be used
-for clustering and dimension reduction for visualizing papers.
+Figure~\ref{fig-workflow} summarises the whole workflow proposed for
+extracting and analyzing decisions from published literature using LLMs.
+Once researchers have identified a set of literature of interest, a
+prompt is needed to instruct LLMs to extract decisions from these
+literature. The outputs from LLM need to be validated and standardized
+before further analysis, due to authors' varied writing styles. The
+validated data can then be used for exploratory data analysis of
+decisions and one analysis we propose is to calculate paper similarity.
+This paper similarity metric can be seen as a distance metric among
+papers, which can be used for clustering and dimension reduction to
+visualize the decision patterns among papers.
 
 \begin{figure}
 
@@ -1130,10 +1119,10 @@ clustering}\label{paper-similarity-and-clustering}
 
 \caption{\label{fig-mds}The multi-dimensional scaling (MDS) based on
 paper similarity distance for \texttt{length(good\_pp)} air pollution
-mortality modelling papers, colored by the smoothing method used. The
-MDS reveals the three distinct groups of papers, corresponds to LOESS,
+mortality modeling papers, colored by the smoothing method used. The MDS
+reveals the three distinct groups of papers, corresponds to LOESS,
 natural spline, and smoothing spline. These groups corresponds to the
-different modelling strategies debated in the European and U.S. studies,
+different modeling strategies debated in the European and U.S. studies,
 as documented in the APHENA project \citep{APHENA}.}
 
 \end{figure}%
@@ -1155,7 +1144,7 @@ distance matrix is then used for multi-dimensional scaling (MDS) in
 Figure~\ref{fig-mds}. The two MDS dimension reveals three clusters
 correspond to the three smoothing methods used in these analyses: LOESS,
 natural spline, and smoothing spline. This grouping aligns with the
-modelling strategies seen in large-scale analysis, such as the U.S.
+modeling strategies seen in large-scale analysis, such as the U.S.
 NMMAPS study \citep{samet2000} and the European APHEA
 \citep{katsouyanni1996} and APHEA2 \citep{katsouyanni2001} project.
 
@@ -1426,13 +1415,13 @@ baseline specification, implicitly assuming other decisions remain
 unchanged. Hence, LLMs will need to link the decisions across different
 models and reconstruct the complete set of decisions for each model.
 
-Beyond modelling choices, decisions in data pre-processing are also
+Beyond modeling choices, decisions in data pre-processing are also
 interesting to compare. For example, \citet{braga2001} aggregated air
 pollution measures from multiple PM10 monitors within the same location
 into a single value. Choices about data source, aggregation, imputation,
 among others, could also have impact on uncertainty of the estimation.
 However, these decisions are often less well-documented in the
-literature than the modelling decisions, hence cannot be extracted by
+literature than the modeling decisions, hence cannot be extracted by
 LLMs. Proper documentation and reporting of these decisions in future
 research are needed before our workflow could be applied to
 pre-processing decisions.
@@ -1487,11 +1476,11 @@ through comparing the similarities among decisions and the similarity
 metric can be used as a distance to cluster papers by their decision
 choices and visualization with dimension reduction algorithms, such as
 multidimensional scaling. We applied this pipeline to a set of air
-pollution modelling literature that associates daily particulate matter
-and daily mortality and hospital admission. From the extracted modelling
+pollution modeling literature that associates daily particulate matter
+and daily mortality and hospital admission. From the extracted modeling
 decisions, we identify the most common decision choices in this type of
 analysis and the paper similarity score calculation revealed the three
-clusters of paper corresponding to different modelling strategies. These
+clusters of paper corresponding to different modeling strategies. These
 findings are all consistent with the general understanding of the field,
 as documented in the APHENA project \citep{APHENA} and other
 methodological comparison studies \citep{peng2006, touloumi2006}.
